// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Instruction should render with 3 buttons 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ListPicker
    instruction="testing"
    items={
      Array [
        Object {
          "id": "123",
          "label": "test",
          "onPress": [MockFunction],
        },
        Object {
          "id": "234",
          "label": "test",
          "onPress": [MockFunction],
        },
      ]
    }
    onPressCancel={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderTopLeftRadius": 20,
              "borderTopRightRadius": 20,
              "height": 90,
              "justifyContent": "center",
              "width": 710,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#888",
                "fontFamily": "System",
                "fontSize": 26,
              }
            }
          >
            testing
          </Text>
        </View>,
        Array [
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderTopColor": "#cdcdcd",
                "borderTopWidth": 0.5,
                "height": 114,
                "justifyContent": "center",
                "width": 710,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#007aff",
                  "fontFamily": "System",
                  "fontSize": 40,
                }
              }
            >
              test
            </Text>
          </TouchableOpacity>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderBottomLeftRadius": 24,
                "borderBottomRightRadius": 24,
                "borderTopColor": "#cdcdcd",
                "borderTopWidth": 0.5,
                "height": 114,
                "justifyContent": "center",
                "width": 710,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#007aff",
                  "fontFamily": "System",
                  "fontSize": 40,
                }
              }
            >
              test
            </Text>
          </TouchableOpacity>,
        ],
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[MockFunction]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 24,
              "height": 114,
              "justifyContent": "center",
              "marginTop": 24,
              "width": 710,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 40,
              }
            }
          >
            Cancel
          </Text>
        </TouchableOpacity>,
      ],
      "style": Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderWidth": 1,
        "bottom": 8,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            style={
              Object {
                "color": "#888",
                "fontFamily": "System",
                "fontSize": 26,
              }
            }
          >
            testing
          </Text>,
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderTopLeftRadius": 20,
            "borderTopRightRadius": 20,
            "height": 90,
            "justifyContent": "center",
            "width": 710,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "testing",
            "style": Object {
              "color": "#888",
              "fontFamily": "System",
              "fontSize": 26,
            },
          },
          "ref": null,
          "rendered": "testing",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            style={
              Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 40,
              }
            }
          >
            test
          </Text>,
          "onPress": [MockFunction],
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderTopColor": "#cdcdcd",
            "borderTopWidth": 0.5,
            "height": 114,
            "justifyContent": "center",
            "width": 710,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "test",
            "style": Object {
              "color": "#007aff",
              "fontFamily": "System",
              "fontSize": 40,
            },
          },
          "ref": null,
          "rendered": "test",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            style={
              Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 40,
              }
            }
          >
            test
          </Text>,
          "onPress": [MockFunction],
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderBottomLeftRadius": 24,
            "borderBottomRightRadius": 24,
            "borderTopColor": "#cdcdcd",
            "borderTopWidth": 0.5,
            "height": 114,
            "justifyContent": "center",
            "width": 710,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "test",
            "style": Object {
              "color": "#007aff",
              "fontFamily": "System",
              "fontSize": 40,
            },
          },
          "ref": null,
          "rendered": "test",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            style={
              Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 40,
              }
            }
          >
            Cancel
          </Text>,
          "onPress": [MockFunction],
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderRadius": 24,
            "height": 114,
            "justifyContent": "center",
            "marginTop": 24,
            "width": 710,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Cancel",
            "style": Object {
              "color": "#007aff",
              "fontFamily": "System",
              "fontSize": 40,
            },
          },
          "ref": null,
          "rendered": "Cancel",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "height": 90,
                "justifyContent": "center",
                "width": 710,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#888",
                  "fontFamily": "System",
                  "fontSize": 26,
                }
              }
            >
              testing
            </Text>
          </View>,
          Array [
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderTopColor": "#cdcdcd",
                  "borderTopWidth": 0.5,
                  "height": 114,
                  "justifyContent": "center",
                  "width": 710,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#007aff",
                    "fontFamily": "System",
                    "fontSize": 40,
                  }
                }
              >
                test
              </Text>
            </TouchableOpacity>,
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderBottomLeftRadius": 24,
                  "borderBottomRightRadius": 24,
                  "borderTopColor": "#cdcdcd",
                  "borderTopWidth": 0.5,
                  "height": 114,
                  "justifyContent": "center",
                  "width": 710,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#007aff",
                    "fontFamily": "System",
                    "fontSize": 40,
                  }
                }
              >
                test
              </Text>
            </TouchableOpacity>,
          ],
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderRadius": 24,
                "height": 114,
                "justifyContent": "center",
                "marginTop": 24,
                "width": 710,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#007aff",
                  "fontFamily": "System",
                  "fontSize": 40,
                }
              }
            >
              Cancel
            </Text>
          </TouchableOpacity>,
        ],
        "style": Object {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderWidth": 1,
          "bottom": 8,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              style={
                Object {
                  "color": "#888",
                  "fontFamily": "System",
                  "fontSize": 26,
                }
              }
            >
              testing
            </Text>,
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderTopLeftRadius": 20,
              "borderTopRightRadius": 20,
              "height": 90,
              "justifyContent": "center",
              "width": 710,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "testing",
              "style": Object {
                "color": "#888",
                "fontFamily": "System",
                "fontSize": 26,
              },
            },
            "ref": null,
            "rendered": "testing",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Text
              style={
                Object {
                  "color": "#007aff",
                  "fontFamily": "System",
                  "fontSize": 40,
                }
              }
            >
              test
            </Text>,
            "onPress": [MockFunction],
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderTopColor": "#cdcdcd",
              "borderTopWidth": 0.5,
              "height": 114,
              "justifyContent": "center",
              "width": 710,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "test",
              "style": Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 40,
              },
            },
            "ref": null,
            "rendered": "test",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Text
              style={
                Object {
                  "color": "#007aff",
                  "fontFamily": "System",
                  "fontSize": 40,
                }
              }
            >
              test
            </Text>,
            "onPress": [MockFunction],
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderBottomLeftRadius": 24,
              "borderBottomRightRadius": 24,
              "borderTopColor": "#cdcdcd",
              "borderTopWidth": 0.5,
              "height": 114,
              "justifyContent": "center",
              "width": 710,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "test",
              "style": Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 40,
              },
            },
            "ref": null,
            "rendered": "test",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Text
              style={
                Object {
                  "color": "#007aff",
                  "fontFamily": "System",
                  "fontSize": 40,
                }
              }
            >
              Cancel
            </Text>,
            "onPress": [MockFunction],
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 24,
              "height": 114,
              "justifyContent": "center",
              "marginTop": 24,
              "width": 710,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Cancel",
              "style": Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 40,
              },
            },
            "ref": null,
            "rendered": "Cancel",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Instruction should render with only the cancel button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ListPicker
    instruction="testing"
    items={Array []}
    onPressCancel={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderTopLeftRadius": 20,
              "borderTopRightRadius": 20,
              "height": 90,
              "justifyContent": "center",
              "width": 710,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#888",
                "fontFamily": "System",
                "fontSize": 26,
              }
            }
          >
            testing
          </Text>
        </View>,
        Array [],
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[MockFunction]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 24,
              "height": 114,
              "justifyContent": "center",
              "marginTop": 24,
              "width": 710,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 40,
              }
            }
          >
            Cancel
          </Text>
        </TouchableOpacity>,
      ],
      "style": Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderWidth": 1,
        "bottom": 8,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            style={
              Object {
                "color": "#888",
                "fontFamily": "System",
                "fontSize": 26,
              }
            }
          >
            testing
          </Text>,
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderTopLeftRadius": 20,
            "borderTopRightRadius": 20,
            "height": 90,
            "justifyContent": "center",
            "width": 710,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "testing",
            "style": Object {
              "color": "#888",
              "fontFamily": "System",
              "fontSize": 26,
            },
          },
          "ref": null,
          "rendered": "testing",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            style={
              Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 40,
              }
            }
          >
            Cancel
          </Text>,
          "onPress": [MockFunction],
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderRadius": 24,
            "height": 114,
            "justifyContent": "center",
            "marginTop": 24,
            "width": 710,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Cancel",
            "style": Object {
              "color": "#007aff",
              "fontFamily": "System",
              "fontSize": 40,
            },
          },
          "ref": null,
          "rendered": "Cancel",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "height": 90,
                "justifyContent": "center",
                "width": 710,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#888",
                  "fontFamily": "System",
                  "fontSize": 26,
                }
              }
            >
              testing
            </Text>
          </View>,
          Array [],
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderRadius": 24,
                "height": 114,
                "justifyContent": "center",
                "marginTop": 24,
                "width": 710,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#007aff",
                  "fontFamily": "System",
                  "fontSize": 40,
                }
              }
            >
              Cancel
            </Text>
          </TouchableOpacity>,
        ],
        "style": Object {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderWidth": 1,
          "bottom": 8,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              style={
                Object {
                  "color": "#888",
                  "fontFamily": "System",
                  "fontSize": 26,
                }
              }
            >
              testing
            </Text>,
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderTopLeftRadius": 20,
              "borderTopRightRadius": 20,
              "height": 90,
              "justifyContent": "center",
              "width": 710,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "testing",
              "style": Object {
                "color": "#888",
                "fontFamily": "System",
                "fontSize": 26,
              },
            },
            "ref": null,
            "rendered": "testing",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Text
              style={
                Object {
                  "color": "#007aff",
                  "fontFamily": "System",
                  "fontSize": 40,
                }
              }
            >
              Cancel
            </Text>,
            "onPress": [MockFunction],
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 24,
              "height": 114,
              "justifyContent": "center",
              "marginTop": 24,
              "width": 710,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Cancel",
              "style": Object {
                "color": "#007aff",
                "fontFamily": "System",
                "fontSize": 40,
              },
            },
            "ref": null,
            "rendered": "Cancel",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
